--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -29,13 +29,41 @@
         justify-content: space-between;
     }
     .logo {
+        padding-bottom: 20px;
         cursor: pointer;
         img {
             height: 50px;
         }
     }
+    .menuItemsLeft{
+        padding-right: 700px;
+        list-style-type: none;
+        display: none;
+        align-items: center;
+        @include md {
+            display: flex;
+        }
+        .menuItem {
+            height: 60px;
+            display: flex;
+            align-items: center;
+            margin: 0 15px;
+            color: white;
+            font-weight: 500;
+            position: relative;
+            &.searchIcon {
+                margin-right: 0;
+            }
+            svg {
+                font-size: 18px;
+            }
+            cursor: pointer;
+            &:hover {
+                color: var(--pink);
+            }
+        }
+    }
     .menuItems {
-        float: right;
         list-style-type: none;
         display: none;
         align-items: center;
