--- a/src/pages/Details/VideoSection/style.scss
+++ b/src/pages/Details/VideoSection/style.scss
@@ -6,16 +6,16 @@
         font-size: 24px;
         color: var(--black);
         margin-bottom: 25px;
+        margin-left: 50px;
     }
     .videos {
-        display: flex;
-        gap: 10px;
+        display: flex !important;
         overflow-x: auto;
         margin-right: -20px;
         margin-left: -20px;
         padding: 0 20px;
+        text-align: center;
         @include md {
-            gap: 20px;
             margin: 0;
             padding: 0;
         }
@@ -73,7 +73,7 @@
                 }
             }
             .videoTitle {
-                color: white;
+                color: var(--black-light);
                 font-size: 14px;
                 line-height: 20px;
                 @include md {
